// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutModal Component should contain brand: brand 1`] = `
<AboutModal
  brandImageAlt=""
  brandImageSrc=""
  className=""
  isOpen={true}
  logoImageAlt="Cloud Meter Logo"
  logoImageSrc="logo.svg"
  onClose={[Function]}
  productName="Cloud Meter"
  trademark=""
>
  <div
    aria-label="Application information copied"
    aria-live="polite"
    className="cloudmeter-about-modal-list"
    tabIndex={-1}
  >
    <TextContent
      className=""
    >
      <TextList
        className=""
        component="dl"
      >
        <TextListItem
          className=""
          component="dt"
        >
          Username
        </TextListItem>
        <TextListItem
          className=""
          component="dd"
        />
        <TextListItem
          className=""
          component="dt"
        >
          UI Version
        </TextListItem>
        <TextListItem
          className=""
          component="dd"
        >
          XXX-frontigrade-version - 0000000000000000000000000000000000000000
        </TextListItem>
      </TextList>
    </TextContent>
  </div>
  <div
    className="cloudmeter-about-modal-copy-footer"
  >
    <Button
      aria-label={null}
      className="cloudmeter-about-modal-copy-button"
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      onClick={[Function]}
      title="Copy application information"
      type="button"
      variant="tertiary"
    >
      <PasteIcon
        color="currentColor"
        size="sm"
        title={null}
      />
    </Button>
  </div>
</AboutModal>
`;

exports[`AboutModal Component should render a connected component with default props: connected 1`] = `
<AboutModal
  apiVersion={null}
  brand={false}
  getSystemConfig={[Function]}
  onClose={null}
  resetTimer={3000}
  session={
    Object {
      "username": "test",
    }
  }
  show={true}
  uiVersion="XXX-frontigrade-version - 0000000000000000000000000000000000000000"
/>
`;

exports[`AboutModal Component should render a non-connected component: hidden modal 1`] = `
<AboutModal
  apiVersion={null}
  brand={false}
  getSystemConfig={[Function]}
  onClose={null}
  resetTimer={3000}
  session={
    Object {
      "username": null,
    }
  }
  show={false}
  uiVersion="XXX-frontigrade-version - 0000000000000000000000000000000000000000"
  user={
    Object {
      "session": Object {
        "username": "test",
      },
    }
  }
>
  <AboutModal
    brandImageAlt=""
    brandImageSrc=""
    className=""
    isOpen={false}
    logoImageAlt="Cloud Meter Logo"
    logoImageSrc="logo.svg"
    onClose={[Function]}
    productName="Cloud Meter"
    trademark=""
  >
    <Portal
      containerInfo={<div />}
    >
      <ModalContent
        ariaDescribedById="pf-about-modal-content-1"
        ariaLabelledbyId="pf-about-modal-title-0"
        brandImageAlt=""
        brandImageSrc=""
        className=""
        isOpen={false}
        logoImageAlt="Cloud Meter Logo"
        logoImageSrc="logo.svg"
        onClose={[Function]}
        productName="Cloud Meter"
        trademark=""
      />
    </Portal>
  </AboutModal>
</AboutModal>
`;

exports[`AboutModal Component should render a non-connected component: show modal 1`] = `
<AboutModal
  apiVersion={null}
  brand={false}
  getSystemConfig={[Function]}
  onClose={null}
  resetTimer={3000}
  session={
    Object {
      "username": null,
    }
  }
  show={false}
  uiVersion="XXX-frontigrade-version - 0000000000000000000000000000000000000000"
  user={
    Object {
      "session": Object {
        "username": "test",
      },
    }
  }
>
  <AboutModal
    brandImageAlt=""
    brandImageSrc=""
    className=""
    isOpen={false}
    logoImageAlt="Cloud Meter Logo"
    logoImageSrc="logo.svg"
    onClose={[Function]}
    productName="Cloud Meter"
    trademark=""
  >
    <Portal
      containerInfo={<div />}
    >
      <ModalContent
        ariaDescribedById="pf-about-modal-content-1"
        ariaLabelledbyId="pf-about-modal-title-0"
        brandImageAlt=""
        brandImageSrc=""
        className=""
        isOpen={false}
        logoImageAlt="Cloud Meter Logo"
        logoImageSrc="logo.svg"
        onClose={[Function]}
        productName="Cloud Meter"
        trademark=""
      />
    </Portal>
  </AboutModal>
</AboutModal>
`;
